include back buttons and better styling

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,11 +6,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>FIM Dashboard</h1>
-  
-  <label for="machineId">Select Machine ID:</label>
-  <input type="text" id="machineId" placeholder="Enter machine ID">
-  <button id="goBtn">Go</button>
+  <div class="container">
+    <h1>FIM Dashboard</h1>
+    
+    <label for="machineId">Enter Machine ID:</label>
+    <input type="text" id="machineId" placeholder="Machine ID">
+    <button id="goBtn">Go</button>
+
+    <div class="navigation">
+      <button onclick="window.location.href='/'">Back to Landing</button>
+    </div>
+  </div>
 
   <script src="js/dashboard.js"></script>
 </body>
