--- a/public/machine.html
+++ b/public/machine.html
@@ -6,23 +6,30 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Machine Data</h1>
-  <p>Machine ID placeholder</p>
+  <div class="container">
+    <h1>Machine Data</h1>
+    <p id="machineIdText">Machine ID: --</p>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Timestamp</th>
-        <th>Hash</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>--</td>
-        <td>--</td>
-      </tr>
-    </tbody>
-  </table>
+    <table>
+      <thead>
+        <tr>
+          <th>Timestamp</th>
+          <th>Hash</th>
+        </tr>
+      </thead>
+      <tbody id="machineData">
+        <tr>
+          <td>--</td>
+          <td>--</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="navigation">
+      <button onclick="window.location.href='/dashboard'">Back to Dashboard</button>
+      <button onclick="window.location.href='/'">Back to Landing</button>
+    </div>
+  </div>
 
   <script src="js/machine.js"></script>
 </body>
