--- a/public/machine.html
+++ b/public/machine.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Machine Details - FIM System</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <div class="container">
@@ -47,6 +47,6 @@
     </div>
   </div>
 
-  <script src="js/machine.js"></script>
+  <script src="/js/machine.js"></script>
 </body>
 </html>
