update dashboard style

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -28,12 +28,12 @@
           <table id="machineTable">
             <thead>
               <tr>
-                <th>Machine Name</th>
-                <th>Reachability</th>
-                <th>Attestation</th>
-                <th>Integrity</th>
-                <th>Last Seen</th>
-                <th>Actions</th>
+                <th class="col-name">Machine Name</th>
+                <th class="col-status">Reachability</th>
+                <th class="col-status">Attestation</th>
+                <th class="col-status">Integrity</th>
+                <th class="col-seen">Last Seen</th>
+                <th class="col-actions">Actions</th>
               </tr>
             </thead>
             <tbody id="machineTableBody">
