--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -45,10 +45,18 @@
         </div>
       </section>
 
-      <section id="machineInfo" class="machine-info" style="display: none;">
-        <h3>Machine Details: <span id="detailMachineId"></span></h3>
-        <div id="infoContent"></div>
-        <div class="info-actions">
+      <!-- Modals -->
+      <div id="modalBackdrop" class="modal-backdrop" style="display: none;"></div>
+      <section id="machineInfo" class="modal-content" style="display: none;">
+        <div class="modal-header">
+          <h3>Machine Details</h3>
+          <button id="closeModalBtn" class="btn-close">&times;</button>
+        </div>
+        <div class="modal-body">
+          <h4 id="detailMachineId"></h4>
+          <div id="infoContent"></div>
+        </div>
+        <div class="modal-footer">
           <button id="viewLogsBtn" class="btn btn-primary">View Event Logs</button>
           <button id="reviewBtn" class="btn btn-success">Mark as Reviewed</button>
         </div>
