--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,6 +12,7 @@
     <header>
       <h1>FIM Dashboard</h1>
       <div class="user-info">
+        <span id="wsStatus" class="ws-badge status-red">WS Disconnected</span>
         <span id="userWelcome">Welcome, Admin</span>
         <button id="logoutBtn" class="btn btn-logout">Logout</button>
       </div>
