--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -91,6 +91,7 @@
     </div>
   </div>
 
+  <script src="https://js.pusher.com/8.3.0/pusher.min.js"></script>
   <script src="js/dashboard.js"></script>
 </body>
 
