updated dashboard to show last update timestamp, renamed elements to reflecet move from websocket to pusher

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,7 +12,8 @@
     <header>
       <h1>FIM Dashboard</h1>
       <div class="user-info">
-        <span id="wsStatus" class="ws-badge status-red">WS Disconnected</span>
+        <span id="liveStatus" class="live-badge status-red">Disconnected</span>
+        <span id="lastUpdated" class="last-updated">Never</span>
         <span id="userWelcome">Welcome, Admin</span>
         <button id="logoutBtn" class="btn btn-logout">Logout</button>
       </div>
